--- a/sass/4. Components/Modal Components/_new-vendor.scss
+++ b/sass/4. Components/Modal Components/_new-vendor.scss
@@ -27,6 +27,7 @@
 
         background-color: $bone;
         
+        overflow: hidden;
         cursor: pointer;
 
         transition: background-color 125ms linear;
@@ -39,6 +40,13 @@
             position: absolute;
 
             fill: $secondary-gray;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            opacity: 95%;
         }
     }
 
